--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta http-equiv="origin-trial" content="Ark/jU99yc1/3MZNm9379mZpmNR2dNNzW5ez2Vvkyo4pG3EAbfeiErATB7qHc9Pb39mP8CpKhasMYgsV7iD1oQgAAABjeyJvcmlnaW4iOiJodHRwczovL2ViYXktY2FsY3VsYXRvci5uZXRsaWZ5LmFwcDo0NDMiLCJmZWF0dXJlIjoiRGlnaXRhbEdvb2RzVjIiLCJleHBpcnkiOjE2NTMyNjM5OTl9">
     <script src="https://kit.fontawesome.com/83948e47aa.js" crossorigin="anonymous"></script>
   </head>
   <body>
